// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches components matches snapshot Calculator 1`] = `
<div
  className="same"
>
  <h2>
    Let's do some math!
  </h2>
  <div
    className="wrapper"
  >
    <input
      className="input-field"
      data-testid="hello"
      maxLength="0"
      readOnly={true}
      type="text"
      value={0}
    />
    <div
      className="btn-wrapper"
    >
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        AC
      </button>
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        +/-
      </button>
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        %
      </button>
      <button
        className="btn light"
        onClick={[Function]}
        type="button"
      >
        ÷
      </button>
    </div>
    <div
      className="btn-wrapper"
    >
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        7
      </button>
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        8
      </button>
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        9
      </button>
      <button
        className="btn light"
        onClick={[Function]}
        type="button"
      >
        x
      </button>
    </div>
    <div
      className="btn-wrapper"
    >
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        4
      </button>
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        5
      </button>
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        6
      </button>
      <button
        className="btn light"
        onClick={[Function]}
        type="button"
      >
        -
      </button>
    </div>
    <div
      className="btn-wrapper"
    >
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        1
      </button>
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        2
      </button>
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        3
      </button>
      <button
        className="btn light"
        onClick={[Function]}
        type="button"
      >
        +
      </button>
    </div>
    <div
      className="btn-wrapper"
    >
      <button
        className="btn wide"
        onClick={[Function]}
        type="button"
      >
        0
      </button>
      <button
        className="btn"
        onClick={[Function]}
        type="button"
      >
        .
      </button>
      <button
        className="btn light"
        onClick={[Function]}
        type="button"
      >
        =
      </button>
    </div>
  </div>
</div>
`;

exports[`matches components matches snapshot Home 1`] = `
<div
  className="home"
>
  <article>
    <h2>
      Welcome to our page
    </h2>
    <p>
      This project is built using REACT, and will be Calculator for simple mathematical operations will add more description, with building the project.
    </p>
    <p>
      If you aren’t satisfied with the build tool and configuration choices, you can \`eject\` at any time. This command will remove the single build dependency from your project.
    </p>
    <p>
      Instead, it will copy all the configuration files and the transitive dependencies (webpack, Babel, ESLint, etc) right into your project so you have full control over them. All of the commands except \`eject\` will still work, but they will point to the copied scripts so you can tweak them. At this point you’re on your own.
    </p>
    <p>
      You don’t have to ever use \`eject\`. The curated feature set is suitable for small and middle deployments, and you shouldn’t feel obligated to use this feature. However we understand that this tool wouldn’t be useful if you couldn’t customize it when you are ready for it.
    </p>
  </article>
</div>
`;

exports[`matches components matches snapshot Navbar 1`] = `
Array [
  <nav
    className="same"
  >
    <h1
      className="heading"
    >
      Math Magicians
    </h1>
    <ul>
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/calculator"
        onClick={[Function]}
      >
        Calculator
      </a>
      <a
        href="/quotes"
        onClick={[Function]}
      >
        Quote
      </a>
    </ul>
  </nav>,
  <div
    className="home"
  >
    <article>
      <h2>
        Welcome to our page
      </h2>
      <p>
        This project is built using REACT, and will be Calculator for simple mathematical operations will add more description, with building the project.
      </p>
      <p>
        If you aren’t satisfied with the build tool and configuration choices, you can \`eject\` at any time. This command will remove the single build dependency from your project.
      </p>
      <p>
        Instead, it will copy all the configuration files and the transitive dependencies (webpack, Babel, ESLint, etc) right into your project so you have full control over them. All of the commands except \`eject\` will still work, but they will point to the copied scripts so you can tweak them. At this point you’re on your own.
      </p>
      <p>
        You don’t have to ever use \`eject\`. The curated feature set is suitable for small and middle deployments, and you shouldn’t feel obligated to use this feature. However we understand that this tool wouldn’t be useful if you couldn’t customize it when you are ready for it.
      </p>
    </article>
  </div>,
]
`;

exports[`matches components matches snapshot Quote 1`] = `
<div>
  <article>
    <h3>
      All mathematicians share a sense of amazement over the infinite deh3th and mysterious beauty and usefulness of mathematics.
    </h3>
    <p>
      - MARTIN GARDNER
    </p>
  </article>
</div>
`;

exports[`matches components matches snapshot button 1`] = `
<button
  className="btn"
  onClick={[Function]}
  type="button"
>
  AC
</button>
`;
